增加PaddingLeft 和 PaddingRight属性

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,8 @@
         bar:textSize="14sp"
         style="@style/progressbarStyle_Horizontal_Red"
         bar:textColor="#cccccc"
+        android:paddingRight="50dp"
+        android:paddingLeft="50dp"
         android:layout_centerInParent="true"/>
 
     <Button
